Use double paragraph sign instead of pilcrow

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -685,6 +685,8 @@
 
 \definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
 
+\def\pc{{\fontsize{13}{13}\selectfont§§}\kern3pt}
+
 \tunemarkup{pgkobomini}{%
 \setcounter{DefaultLines}{2}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{19}{9}\bfseries\itshape}%
@@ -715,7 +717,6 @@
 \newcommand{\sectiontitlefontsize}{\fontsize{9}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{13}{15}\selectfont}
 \setlength{\minitocafterskip}{-1.2ex}
-\def\pc{{\fontsize{8}{8}\selectfont\P}\kern2pt}
 }
 
 \tunemarkup{pghanlin}{%
@@ -774,7 +775,6 @@
 \renewcommand{\bibtocfont}{\fontsize{7.7}{14}\selectfont}
 \newcommand{\sectiontitlefontsize}{\fontsize{9}{9}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
-\def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
 % for Baskerville
 %\newcommand{\bibbookend}{\fontsize{14.5}{18}\selectfont}
 %\newcommand{\urantiamainfontsize}{14.5/18}
@@ -816,7 +816,6 @@
 \newcommand{\sectiontitlefontsize}{\fontsize{10}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
-\def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
 \newcommand{\urantiamainfontsize}{18/20}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{25}{9}\bfseries\itshape}%
@@ -847,7 +846,6 @@
 \newcommand{\parttitlefontsize}{\huge}
 \newcommand{\sectiontitlefontsize}{\fontsize{12}{13}\selectfont}
 \setlength{\minitocafterskip}{-0.15ex}
-\def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 \newcommand{\bibbookend}{\fontsize{17}{19}\selectfont}
 \newcommand{\urantiamainfontsize}{17/19}
@@ -859,7 +857,6 @@
 
 \tunemarkup{pgthinmob}{%
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{10}{10}\selectfont#1}}\kern0.2em\relax}
-\def\pc{{\fontsize{12}{12}\selectfont\P}\kern2pt}
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
 %\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.7}
 %\pagecolor{ubpagebg}
@@ -893,7 +890,6 @@
 
 \tunemarkup{pgnexus7}{%
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{10}{10}\selectfont#1}}\kern0.2em\relax}
-\def\pc{{\fontsize{12}{12}\selectfont\P}\kern2pt}
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
 %\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.7}
 %\pagecolor{ubpagebg}
@@ -955,7 +951,6 @@
 \renewcommand{\bibfnvssize}{\normalsize\bfseries}
 \newcommand{\bibtocsuperheadfont}{\fontsize{20}{22}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
-\def\pc{{\fontsize{9}{9}\selectfont\P}\kern2pt}
 }
 
 \tunemarkup{pgcrownq}{%
@@ -1020,7 +1015,6 @@
 \newcommand{\bibtocsuperheadfont}{\fontsize{20}{22}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{22}{9}\bfseries\itshape}%
-\def\pc{{\fontsize{8}{8}\selectfont\P}\kern1pt}
 }
 
 \newcommand{\vsetoff}{\vspace*{1ex}}%
