--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -1,4 +1,4 @@
-\documentclass{book}
+\documentclass[12pt]{book}
 \usepackage{urantia-study-edition}
 \input select-book
 \begin{document}
@@ -17,7 +17,6 @@
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \tunemarkup{pgafour}{\include{tex/paper-titles}}
 \tunemarkup{pgcrownq}{\include{tex/paper-titles}}
-\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}
 \tunemarkup{introinclude}{\include{tex/intro}}
 \parti
 \include{tex/p000}
