--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -671,12 +671,11 @@
 \newcommand{\uminitoc}[1]{%
    {%
     \stepcounter{uminitocnum}%
-    \sectiontitlefont\sectiontitlefontsize
+    \bibsectitlefont
     \makebox[0.08\linewidth][r]{\theuminitocnum.\,}%
     \makebox[0.85\linewidth][l]{\uppercase{#1}\bibdf}%
-    \makebox[0.06\linewidth][r]{\bibpr{p\thepaper_\theuminitocnum}}\\%
+    \makebox[0.06\linewidth][r]{\bibpr{p\thepaper_\theuminitocnum}}\\[-0.5ex]%
    }%
-   %\linebreak
 }
 
 % for TOC entries horizontal spacing
@@ -696,8 +695,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\headingfont\large\bfseries}
-\newcommand{\bibpapertitlefont}{\headingfont\Large\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\large\bfseries}
+\newcommand{\bibpapertitlefont}{\titlefont\Large\bfseries}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
@@ -714,7 +713,7 @@
 \newcommand{\urantiamainfontsize}{18/20}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{15}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
-\newcommand{\sectiontitlefontsize}{\fontsize{9}{10}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{11}{13}\selectfont}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{13}{15}\selectfont}
 \setlength{\minitocafterskip}{-1.2ex}
 }
@@ -725,8 +724,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\headingfont\normalsize\bfseries}
-\newcommand{\bibpapertitlefont}{\headingfont\large\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\normalsize\bfseries}
+\newcommand{\bibpapertitlefont}{\titlefont\large\bfseries}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
@@ -749,8 +748,9 @@
 }
 
 \tunemarkup{pgkoboaurahd}{%
+\tolerance=2000
 \protected\def\print@vssup#1{\makebox[0.4em][l]{\@textsuperscript{\fontsize{7}{7}\bfseries#1}}\kern0.3em\relax}
-\setcounter{DefaultLines}{3}
+\setcounter{DefaultLines}{2}
 \renewcommand{\numw}{0.07\linewidth}
 \renewcommand{\txtw}{0.85\linewidth}
 \newcommand{\bibtocsuperheadfont}{\fontsize{13}{13}\selectfont}
@@ -759,8 +759,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{6.3}{6.3}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{6}{6}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\headingfont\fontsize{12}{14.5}\selectfont}
-\newcommand{\bibpapertitlefont}{\headingfont\fontsize{15}{23}\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\fontsize{12}{16}\selectfont}
+\newcommand{\bibpapertitlefont}{\titlefont\fontsize{14}{16}\bfseries}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
@@ -769,18 +769,14 @@
 \definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
-\newcommand{\subfont}{\fontsize{14}{19}\itshape}
-\newcommand{\parttitlefontsize}{\huge}
+\newcommand{\subfont}{\fontsize{11}{13}\itshape}
+\newcommand{\parttitlefontsize}{\normalsize}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7.7}{14}\selectfont}
-\newcommand{\sectiontitlefontsize}{\fontsize{9}{9}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9}{9}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
-% for Baskerville
-%\newcommand{\bibbookend}{\fontsize{14.5}{18}\selectfont}
-%\newcommand{\urantiamainfontsize}{14.5/18}
-% for Garamond
-\newcommand{\bibbookend}{\fontsize{17.5}{20}\selectfont}
-\newcommand{\urantiamainfontsize}{17.5/20}
+\newcommand{\bibbookend}{\fontsize{16}{18}\selectfont}
+\newcommand{\urantiamainfontsize}{16/18}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{13}{15}\selectfont}
 \renewcommand{\bibfnchapsize}{\headerfont\large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\normalsize\bfseries}
@@ -797,8 +793,8 @@
 \renewcommand{\bibheadchapsize}{\fontsize{8}{8}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\bibpaperfont}{\headingfont\large\selectfont}
-\newcommand{\bibpapertitlefont}{\headingfont\Large\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\large\selectfont}
+\newcommand{\bibpapertitlefont}{\titlefont\Large\bfseries}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
@@ -833,8 +829,8 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.3, 0.6}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubblue}{ahb}}}
-\newcommand{\bibpaperfont}{\titlefont\fontsize{13}{15}\selectfont}
-\newcommand{\bibpapertitlefont}{\titlefont\fontsize{15}{17}\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\fontsize{14}{18}\selectfont}
+\newcommand{\bibpapertitlefont}{\titlefont\fontsize{16}{18}\selectfont}
 \newcommand{\bibtocsuperheadfont}{\fontsize{18}{20}\selectfont}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{12}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7.6}{13}\selectfont}
@@ -843,15 +839,15 @@
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\subfont}{\fontsize{14}{17}\itshape}
-\newcommand{\parttitlefontsize}{\huge}
-\newcommand{\sectiontitlefontsize}{\fontsize{12}{13}\selectfont}
+\newcommand{\parttitlefontsize}{\LARGE}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{11}{13}\selectfont}
 \setlength{\minitocafterskip}{-0.15ex}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
 \newcommand{\bibbookend}{\fontsize{17}{19}\selectfont}
 \newcommand{\urantiamainfontsize}{17/19}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
-\renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
-\renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
+\renewcommand{\bibfnchapsize}{\headerfont\large\bfseries}
+\renewcommand{\bibfnvssize}{\headerfont\normalsize\bfseries}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{29}{8}\selectfont}%
 }
 
@@ -866,8 +862,8 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubblue}{ahb}}}
-\newcommand{\bibpaperfont}{\headingfont\fontsize{13}{15}\selectfont}
-\newcommand{\bibpapertitlefont}{\headingfont\fontsize{15}{17}\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\fontsize{13}{15}\selectfont}
+\newcommand{\bibpapertitlefont}{\titlefont\fontsize{15}{17}\bfseries}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.2}{7.2}\selectfont}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{16}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{9.8}{13.5}\selectfont}
@@ -877,7 +873,7 @@
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\subfont}{\fontsize{14}{17}\itshape}
 \newcommand{\parttitlefontsize}{\LARGE}
-\newcommand{\sectiontitlefontsize}{\fontsize{9}{12}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9}{12}\selectfont}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
 \newcommand{\bibbookend}{\fontsize{19}{21}\selectfont}
@@ -899,8 +895,8 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubgreen}{ahb}}}
-\newcommand{\bibpaperfont}{\headingfont\fontsize{13}{15}\selectfont}
-\newcommand{\bibpapertitlefont}{\headingfont\fontsize{15}{17}\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\fontsize{13}{15}\selectfont}
+\newcommand{\bibpapertitlefont}{\titlefont\fontsize{15}{17}\bfseries}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.2}{7.2}\selectfont}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{13}{16}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{9.9}{13.6}\selectfont}
@@ -939,8 +935,8 @@
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{12}{15}\selectfont}
 \newcommand{\bibbookend}{\fontsize{14}{17}\selectfont}
 \newcommand{\urantiamainfontsize}{14/17}
-\newcommand{\bibpaperfont}{\headingfont\fontsize{16}{19}\selectfont}
-\newcommand{\bibpapertitlefont}{\headingfont\fontsize{18}{19}\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\fontsize{16}{19}\selectfont}
+\newcommand{\bibpapertitlefont}{\titlefont\fontsize{18}{19}\bfseries}
 \newcommand{\sectiontitlefontsize}{\fontsize{15}{15}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{10}{10}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{13.0}{13.0}\selectfont}
@@ -971,8 +967,8 @@
 \renewcommand{\footnotesize}{\fontsize{12}{14}\selectfont}
 \renewcommand{\bibbookend}{\fontsize{13.9}{16}\selectfont}
 \renewcommand{\urantiamainfontsize}{13.9/16}
-\newcommand{\bibpaperfont}{\headingfont\fontsize{17}{20}\bfseries}
-\newcommand{\bibpapertitlefont}{\headingfont\fontsize{21}{22}\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\fontsize{17}{20}\bfseries}
+\newcommand{\bibpapertitlefont}{\titlefont\fontsize{21}{22}\bfseries}
 \newcommand{\sectiontitlefontsize}{\fontsize{15}{15}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{10}{10}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{12.0}{12.0}\selectfont}
@@ -1002,8 +998,8 @@
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
 \newcommand{\bibbookend}{\fontsize{17}{19}\selectfont}
 \newcommand{\urantiamainfontsize}{17/19}
-\newcommand{\bibpaperfont}{\headingfont\fontsize{15.0}{18}\bfseries}
-\newcommand{\bibpapertitlefont}{\headingfont\fontsize{16.0}{19.0}\bfseries}
+\newcommand{\bibpaperfont}{\titlefont\fontsize{15.0}{18}\bfseries}
+\newcommand{\bibpapertitlefont}{\titlefont\fontsize{16.0}{19.0}\bfseries}
 \newcommand{\sectiontitlefontsize}{\fontsize{10}{10}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{9.6}{9.6}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{10.0}{10.0}\selectfont}
