Some more typesetting improvements

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -740,7 +740,7 @@
 \newcommand{\parttitlefontsize}{\large}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{14}{17}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10}{17}\selectfont}
-\newcommand{\sectiontitlefontsize}{\fontsize{8}{9}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{8}{9}\selectfont}
 \setlength{\minitocafterskip}{-1.5ex}
 \renewcommand{\footnotesize}{\fontsize{14}{17}\selectfont}
 \renewcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
@@ -809,7 +809,7 @@
 \newcommand{\parttitlefontsize}{\huge}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2}\fontsize{11}{11}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{7}{11}\selectfont}
-\newcommand{\sectiontitlefontsize}{\fontsize{10}{10}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{10}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontspec[WordSpace={1.0,4.0,0.1},Mapping=tex-text]{\urantiamainfont}\fontsize{14}{16}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
 \newcommand{\bibbookend}{\fontsize{18}{20}\selectfont}
@@ -906,7 +906,7 @@
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\subfont}{\fontsize{14}{17}\itshape}
 \newcommand{\parttitlefontsize}{\LARGE}
-\newcommand{\sectiontitlefontsize}{\fontsize{9}{12}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{9}{12}\selectfont}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
 \newcommand{\bibbookend}{\fontsize{19}{21}\selectfont}
@@ -937,7 +937,7 @@
 \newcommand{\urantiamainfontsize}{14/17}
 \newcommand{\bibpaperfont}{\titlefont\fontsize{16}{19}\selectfont}
 \newcommand{\bibpapertitlefont}{\titlefont\fontsize{18}{19}\bfseries}
-\newcommand{\sectiontitlefontsize}{\fontsize{15}{15}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{15}{15}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{10}{10}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{13.0}{13.0}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{10}{10}\selectfont}
@@ -969,7 +969,7 @@
 \renewcommand{\urantiamainfontsize}{13.9/16}
 \newcommand{\bibpaperfont}{\titlefont\fontsize{17}{20}\bfseries}
 \newcommand{\bibpapertitlefont}{\titlefont\fontsize{21}{22}\bfseries}
-\newcommand{\sectiontitlefontsize}{\fontsize{15}{15}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{15}{15}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{10}{10}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{12.0}{12.0}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{10}{10}\selectfont}
@@ -1000,7 +1000,7 @@
 \newcommand{\urantiamainfontsize}{17/19}
 \newcommand{\bibpaperfont}{\titlefont\fontsize{15.0}{18}\bfseries}
 \newcommand{\bibpapertitlefont}{\titlefont\fontsize{16.0}{19.0}\bfseries}
-\newcommand{\sectiontitlefontsize}{\fontsize{10}{10}\selectfont}
+\newcommand{\bibsectitlefont}{\sectiontitlefont\fontsize{10}{10}\selectfont}
 \renewcommand{\bibheadfont}{\headingfont\addfontfeature{LetterSpace=2.5}\fontsize{9.6}{9.6}\bfseries}
 \newcommand{\bibheadpapersize}{\fontsize{10.0}{10.0}\selectfont}
 \renewcommand{\bibheadchapsize}{\fontsize{9.5}{9.5}\selectfont}
