Added Bibliography at the end of papers 1--5.

--- a/tex/p002.tex
+++ b/tex/p002.tex
@@ -82,3 +82,17 @@
 \vsetoff
 \vs p002 7:13 [Presented by a Divine Counsellor acting by authority of the Ancients of Days on Uversa.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Knudson1}
+Albert C. Knudson.
+{<<The Doctrine of God>>.}
+{\em New York: Abingdon-Cokesbury Press}, 1930.
+\bibitem{Hume1}
+Robert Ernest Hume, M.A., Ph.D.,
+{<<Treasure\hyp{}House of the Living Religions: Selections from Their Sacred Scriptures>>.}
+{\em New York: Charles Scribner's Sons}, 1932.
+\bibitem{Overstreet1}
+H.A. Overstreet
+{<<The Enduring Question: A Search for a Philosophy of Life>>.}
+{\em New York: W. Norton \&\ Company, Inc.}, 1931.
+\end{thebibliography}
