--- a/tex/p004.tex
+++ b/tex/p004.tex
@@ -59,3 +59,13 @@
 \vsetoff
 \vs p004 5:8 [Presented by a Divine Counsellor of Uversa.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Knudson1}
+Albert C. Knudson.
+{<<The Doctrine of God>>.}
+{\em New York: Abingdon-Cokesbury Press}, 1930.
+\bibitem{Hocking1}
+William Ernest Hocking.
+{<<The Meaning of God in Human Experience: A Philosophic Study of Religion>>}
+{\em New Haven: Yale University Press}, 1912.
+\end{thebibliography}
