--- a/tex/p005.tex
+++ b/tex/p005.tex
@@ -85,3 +85,17 @@
 \vsetoff
 \vs p005 6:14 [This is the fifth and last of the series presenting the narrative of the Universal Father by a Divine Counsellor of Uversa.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Strong1}
+Rev.~Josiah Strong, D.D.
+{<<The New World\hyp{}Religion.>>}
+{\em Garden City, New York: Doubleday, Page \& Company}, 1915.
+\bibitem{Matthews1}
+W. R. Matthews, K.C.V.O., D.D., D.Lit.
+{<<God in Christian Thought and Experience>>.}
+{\em London: Nisbet \& Co. Ltd.}, 1930.
+\bibitem{Illingworth1}
+J.R. Illingworth, M.A.
+{<<Personality Human and Divine>>.}
+{\em London and New York: The Macmillan Company}, 1894.
+\end{thebibliography}
