Update two illustrations

--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -58,8 +58,8 @@
 \usection{Space Functions of Paradise}
 \vs p011 7:1 Space does not exist on any of the surfaces of Paradise. If one “looked” directly up from the upper surface of Paradise, one would “see” nothing but unpervaded space going out or coming in, just now coming in. Space does not touch Paradise; only the quiescent \bibemph{midspace zones} come in contact with the central Isle.
 \vs p011 7:2 Paradise is the actually motionless nucleus of the relatively quiescent zones existing between pervaded and unpervaded space. Geographically these zones appear to be a relative extension of Paradise, but there probably is some motion in them. We know very little about them, but we observe that these zones of lessened space motion separate pervaded and unpervaded space. Similar zones once existed between the levels of pervaded space, but these are now less quiescent.
-\vs p011 7:3 The vertical cross section of total space would slightly resemble a Maltese cross, with the horizontal arms representing pervaded (universe) space and the vertical arms representing unpervaded (reservoir) space. The areas between the four arms would separate them somewhat as the midspace zones separate pervaded and unpervaded space. These quiescent midspace zones grow larger and larger at greater and greater distances from Paradise and eventually encompass the borders of all space and completely incapsulate both the space reservoirs and the entire horizontal extension of pervaded space.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=0.98\columnwidth]{images/TheOceansOfSpace-small.jpg}\caption{The Oceans of Space by Troy~R.~Bishop}\end{figure}}
-\vs p011 7:4 \pc Space is neither a subabsolute condition within, nor the presence of, the Unqualified Absolute, neither is it a function of the Ultimate. It is a bestowal of Paradise, and the space of the grand universe and that of all outer regions is believed to be actually pervaded by the ancestral space potency of the Unqualified Absolute. From near approach to peripheral Paradise, this pervaded space extends horizontally outward through the fourth space level and beyond the periphery of the master universe, but how far beyond we do not know.
+\vs p011 7:3 The vertical cross section of total space would slightly resemble a Maltese cross, with the horizontal arms representing pervaded (universe) space and the vertical arms representing unpervaded (reservoir) space. The areas between the four arms would separate them somewhat as the midspace zones separate pervaded and unpervaded space. These quiescent midspace zones grow larger and larger at greater and greater distances from Paradise and eventually encompass the borders of all space and completely incapsulate both the space reservoirs and the entire horizontal extension of pervaded space.
+\vs p011 7:4 \pc Space is neither a subabsolute condition within, nor the presence of, the Unqualified Absolute, neither is it a function of the Ultimate. It is a bestowal of Paradise, and the space of the grand universe and that of all outer regions is believed to be actually pervaded by the ancestral space potency of the Unqualified Absolute. From near approach to peripheral Paradise, this pervaded space extends horizontally outward through the fourth space level and beyond the periphery of the master universe, but how far beyond we do not know.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/space-functions.pdf}\caption{Space Functions of Paradise}\end{figure}}
 \vs p011 7:5 If you imagine a finite, but inconceivably large, V\hyp{}shaped plane situated at right angles to both the upper and lower surfaces of Paradise, with its point nearly tangent to peripheral Paradise, and then visualize this plane in elliptical revolution about Paradise, its revolution would roughly outline the volume of pervaded space.
 \vs p011 7:6 There is an upper and a lower limit to horizontal space with reference to any given location in the universes. If one could move far enough at right angles to the plane of Orvonton, either up or down, eventually the upper or lower limit of pervaded space would be encountered. Within the known dimensions of the master universe these limits draw farther and farther apart at greater and greater distances from Paradise; space thickens, and it thickens somewhat faster than does the plane of creation, the universes.
 \vs p011 7:7 \pc The relatively quiet zones between the space levels, such as the one separating the seven superuniverses from the first outer space level, are enormous elliptical regions of quiescent space activities. These zones separate the vast galaxies which race around Paradise in orderly procession. You may visualize the first outer space level, where untold universes are now in process of formation, as a vast procession of galaxies swinging around Paradise, bounded above and below by the midspace zones of quiescence and bounded on the inner and outer margins by relatively quiet space zones.\fnc{The relatively quiet \bibtextul{zone} between the space levels,\ldots{} \bibexpl{The plural, found in all editions after 1955, agrees with the verb “are” and is otherwise consistent with the general sense of the paragraph.}}
