Add thanks to Irina Chernova for illustrations

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -65,6 +65,7 @@ and made it available on my website in both electronic and printed forms:
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
 Many thanks are due to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
+I would like to thank Irina Chernova for creating illustrations for this edition.
 For information on the human sources, upon which this Revelation is based, I am indebted almost entirely to the outstanding
 research work by Matthew Block, published on his website \myurl{https://urantiabooksources.com/}.
 Only a few of the sources related to the scientific papers have been discovered by myself independently.
