Spelling corrections center => centre

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -1842,7 +1842,7 @@
 \qstart{Which of these revolutionary movements does our planet Urantia participate in?}
 {The revolution of Urantia around its sun}{1}
 {The circuit of our solar system about the nucleus of the former Andronover nebula}{1}
-{The rotation of the Andronover stellar family and the associated clusters about the composite rotation-gravity center of the star cloud of Nebadon}{1}
+{The rotation of the Andronover stellar family and the associated clusters about the composite rotation-gravity centre of the star cloud of Nebadon}{1}
 {The swing of the local star cloud of Nebadon and its associated creations around the Sagittarius centre of their minor sector}{1}
 {The rotation of the one hundred minor sectors, including Sagittarius, about their major sector}{1}
 {The whirl of the ten major sectors, the so-called star drifts, about the Uversa headquarters of Orvonton}{1}
@@ -1852,7 +1852,7 @@
 \qstart{Which of these motions are genetic, i.e. inherent in their origin?}
 {The revolution of Urantia around its sun}{1}
 {The circuit of our solar system about the nucleus of the former Andronover nebula}{1}
-{The rotation of the Andronover stellar family and the associated clusters about the composite rotation-gravity center of the star cloud of Nebadon}{0}
+{The rotation of the Andronover stellar family and the associated clusters about the composite rotation-gravity centre of the star cloud of Nebadon}{0}
 {The swing of the local star cloud of Nebadon and its associated creations around the Sagittarius centre of their minor sector}{0}
 {The rotation of the one hundred minor sectors, including Sagittarius, about their major sector}{0}
 {The whirl of the ten major sectors, the so-called star drifts, about the Uversa headquarters of Orvonton}{0}
@@ -1862,7 +1862,7 @@
 \qstart{Which of these motions are composite, i.e. partly produced by the intelligent and purposeful action of the Paradise force organizers?}
 {The revolution of Urantia around its sun}{0}
 {The circuit of our solar system about the nucleus of the former Andronover nebula}{0}
-{The rotation of the Andronover stellar family and the associated clusters about the composite rotation-gravity center of the star cloud of Nebadon}{1}
+{The rotation of the Andronover stellar family and the associated clusters about the composite rotation-gravity centre of the star cloud of Nebadon}{1}
 {The swing of the local star cloud of Nebadon and its associated creations around the Sagittarius centre of their minor sector}{1}
 {The rotation of the one hundred minor sectors, including Sagittarius, about their major sector}{1}
 {The whirl of the ten major sectors, the so-called star drifts, about the Uversa headquarters of Orvonton}{1}
@@ -4679,7 +4679,7 @@
 {It completely vanished from the face of the earth}{0}
 \qstop
 
-\qstart{Immediately following the Bablot conflict, three out of the four great Nodite centers were established. Which of the following isn't one of them?}
+\qstart{Immediately following the Bablot conflict, three out of the four great Nodite centres were established. Which of the following isn't one of them?}
 {The western (Syrian) Nodites --- who contributed much to the later appearing Assyrian stock}{0}
 {The eastern (west/south west Iran) Elamite Nodites (``the Land of Nod'')}{0}
 {The central (pre-Sumerian) Nodites at the mouth of the Tigris and Euphrates rivers --- founders of the historic Sumerians}{0}
@@ -4697,7 +4697,7 @@
 
 \qstart{The Nodites were divided as to the plans for the Tower of Babel. There were three differing views as to the purpose of building the tower. Which view is \bibemph{not} one of them?}
 {As a memorial of Nodite history and racial superiority}{0}
-{To commemorate the Dilmun culture which was foreseen as becoming a great center of commerce, art and manufacture}{0}
+{To commemorate the Dilmun culture which was foreseen as becoming a great centre of commerce, art and manufacture}{0}
 {For the worship of the Father of all, and for making atonement for the folly of their progenitors in participating in the Caligastia rebellion. That the whole purpose of the new city should be to take the place of Dalamatia}{0}
 {As a memorial to Daligastia, in whose honour the city of Dalamatia was named}{1}
 \qstop
