Change the way numerical data is tabulated

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -35,20 +35,20 @@
 \vs p015 2:8 \ublistelem{6.}\bibnobreakspace \bibemph{The Superuniverse.} 10 major sectors (about $10^{12}$ inhabitable planets) constitute a superuniverse. Each superuniverse is provided with an enormous and glorious headquarters world and is ruled by three Ancients of Days.
 \vs p015 2:9 \ublistelem{7.}\bibnobreakspace \bibemph{The Grand Universe.} Seven superuniverses make up the present organized grand universe, consisting of approximately seven trillion inhabitable worlds plus the architectural spheres and the one billion inhabited spheres of Havona. The superuniverses are ruled and administered indirectly and reflectively from Paradise by the Seven Master Spirits. The billion worlds of Havona are directly administered by the Eternals of Days, one such Supreme Trinity Personality presiding over each of these perfect spheres.
 \vs p015 2:10 \pc Excluding the Paradise\hyp{}Havona spheres, the plan of universe organization provides for the following units:
-\vs p015 2:11 Superuniverses\bibdf\makebox[4em][l]{$7$}
-\vs p015 2:12 Major sectors\bibdf\makebox[4em][l]{$70$}
-\vs p015 2:13 Minor sectors\bibdf\makebox[4em][l]{$7 \times 10^3$}
-\vs p015 2:14 Local universes\bibdf\makebox[4em][l]{$7 \times 10^5$}
-\vs p015 2:15 Constellations\bibdf\makebox[4em][l]{$7 \times 10^7$}
-\vs p015 2:16 Local systems\bibdf\makebox[4em][l]{$7 \times 10^9$}
-\vs p015 2:17 Inhabitable planets\bibdf\makebox[4em][l]{$7 \times 10^{12}$}
+\vs p015 2:11 Superuniverses\bibdf7
+\vs p015 2:12 Major sectors\bibdf70
+\vs p015 2:13 Minor sectors\bibdf7,000
+\vs p015 2:14 Local universes\bibdf700,000
+\vs p015 2:15 Constellations\bibdf70,000,000
+\vs p015 2:16 Local systems\bibdf7,000,000,000
+\vs p015 2:17 Inhabitable planets\bibdf7,000,000,000,000
 \vs p015 2:18 Each of the seven superuniverses is constituted, approximately, as follows:
-\vs p015 2:19 One system embraces, approximately $10^3$ worlds
-\vs p015 2:20 One constellation (100 systems) $10^5$ worlds
-\vs p015 2:21 One universe (100 constellations) $10^7$ worlds
-\vs p015 2:22 One minor sector (100 universes) $10^9$ worlds
-\vs p015 2:23 One major sector (100 minor sectors) $10^{11}$ worlds
-\vs p015 2:24 One superuniverse (10 major sectors) $10^{12}$ worlds
+\vs p015 2:19 One system embraces, approximately\bibdf1,000 worlds
+\vs p015 2:20 One constellation (100 systems)\bibdf100,000 worlds
+\vs p015 2:21 One universe (100 constellations)\bibdf10,000,000 worlds
+\vs p015 2:22 One minor sector (100 universes)\bibdf1,000,000,000 worlds
+\vs p015 2:23 One major sector (100 minor sectors)\bibdf100,000,000,000 worlds
+\vs p015 2:24 One superuniverse (10 major sectors)\bibdf1,000,000,000,000 worlds
 \vs p015 2:25 \pc All such estimates are approximations at best, for new systems are constantly evolving while other organizations are temporarily passing out of material existence.
 \usection{The Superuniverse of Orvonton}
 \vs p015 3:1 Practically all of the starry realms visible to the naked eye on Urantia belong to the seventh section of the grand universe, the superuniverse of Orvonton. The vast Milky Way starry system represents the central nucleus of Orvonton, being largely beyond the borders of your local universe. This great aggregation of suns, dark islands of space, double stars, globular clusters, star clouds, spiral and other nebulae, together with myriads of individual planets, forms a watchlike, elongated\hyp{}circular grouping of about \bibfrac{1}{7}\ts{th} of the inhabited evolutionary universes.
