--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -73,7 +73,7 @@
 \vs p000 3:6 \ublistelem{5.}\bibnobreakspace The Deity Absolute.
 \vs p000 3:7 \ublistelem{6.}\bibnobreakspace The Universal Absolute.
 \vs p000 3:8 \ublistelem{7.}\bibnobreakspace The Unqualified Absolute.
-\vs p000 3:9 \pc God, as the First Source and Centre, is primal in relation to total reality --- unqualifiedly. The First Source and Centre is infinite as well as eternal and is therefore limited or conditioned only by volition.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/reality.pdf}\caption{The Seven Absolutes and the structure of reality}\end{figure}}
+\vs p000 3:9 \pc God, as the First Source and Centre, is primal in relation to total reality --- unqualifiedly. The First Source and Centre is infinite as well as eternal and is therefore limited or conditioned only by volition.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/reality\tunemarkup{pgkoboaurahd}{-bw}.pdf}\caption{The Seven Absolutes and the structure of reality}\end{figure}}
 \vs p000 3:10 God --- the Universal Father --- is the personality of the First Source and Centre and as such maintains personal relations of infinite control over all co\hyp{}ordinate and subordinate sources and centres. Such control is personal and infinite in \bibemph{potential,} even though it may never actually function owing to the perfection of the function of such co\hyp{}ordinate and subordinate sources and centres and personalities.
 \vs p000 3:11 The First Source and Centre is, therefore, primal in all domains: deified or undeified, personal or impersonal, actual or potential, finite or infinite. No thing or being, no relativity or finality, exists except in direct or indirect relation to, and dependence on, the primacy of the First Source and Centre.
 \vs p000 3:12 \pc \bibemph{The First Source and Centre} is related to the universe as:
